fix logo too big show program

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -444,6 +444,9 @@ button {
                     span{
                         text-align: center;
                     }
+                    .logo{
+                        max-width: 100px;
+                    }
                 }
                 section{
                     padding: 5px 0;
